Fixed extremely long user names overflowing the MemberInfoPopover

--- a/src/modules/core/components/InfoPopover/MemberInfoPopover/MemberInfoPopover.css
+++ b/src/modules/core/components/InfoPopover/MemberInfoPopover/MemberInfoPopover.css
@@ -2,7 +2,7 @@
 
 .main {
   padding: 20px 25px 25px 25px;
-  width: 460px;
+  width: 470px;
 }
 
 .section {
